info list update

--- a/vesta/vesta WatchKit App/Info.plist
+++ b/vesta/vesta WatchKit App/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<string>edu.stanford.cs147.Vesta.watchkit</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -26,7 +26,7 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>yinglanma.vesta</string>
+	<string>edu.stanford.cs147.Vesta</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
